--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "backend/server.js",
   "type": "module",
   "scripts": {
-    "dev": "node --watch backend/server.js"
+    "dev": "nodemon backend/server.js"
   },
   "keywords": [],
   "author": "Ayberk Yavas",
@@ -21,6 +21,7 @@
     "mongoose": "^8.8.3"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "nodemon": "^3.1.7"
   }
 }
