--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.0.0-insiders.0339c42",
+    "@tanstack/react-query": "^5.62.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
     "tailwind-scrollbar-hide": "^1.1.7",
