--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "theme-change": "^2.5.0"
+    "theme-change": "^2.5.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
