--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "twitter-clone",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "backend/server.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon backend/server.js"
+    "dev": "cross-env NODE_ENV=development nodemon backend/server.js",
+		"start": "cross-env NODE_ENV=production node backend/server.js",
+		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "keywords": [],
   "author": "Ayberk Yavas",
