First Production Commit

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^7.0.1",
     "tailwind-scrollbar-hide": "^1.1.7",
     "theme-change": "^2.5.0",
+    "twitter-clone": "file:..",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
